fixed profile spacing

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -123,6 +123,7 @@ h3 + #address {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 2rem;
 }
 
 #skillList{
